# ff-split/internal/api/handler/icon_handler.go
@@ -35,7 +35,13 @@ func (s *ServerHandler) GetIconByID(c *gin.Context, id int) {
 	}
 
 	if icon == nil {
-		c.JSON(http.StatusNotFound, api.ErrorResponse{Error: "иконка не найдена"})
+		c.JSON(http.StatusNotFound, api.ErrorResponse{
+		Id: c.GetHeader("X-Request-ID"),
+		Error: api.ErrorResponseDetail{
+			Code:    "not_found",
+			Message: "иконка не найдена",
+		},
+	})
 		return
 	}
 
@@ -46,7 +52,13 @@ func (s *ServerHandler) GetIconByID(c *gin.Context, id int) {
 func (s *ServerHandler) CreateIcon(c *gin.Context) {
 	var apiRequest api.IconRequest
 	if err := c.ShouldBindJSON(&apiRequest); err != nil {
-		c.JSON(http.StatusBadRequest, api.ErrorResponse{Error: "некорректные данные запроса"})
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+		Id: c.GetHeader("X-Request-ID"),
+		Error: api.ErrorResponseDetail{
+			Code:    "validation",
+			Message: "некорректные данные запроса",
+		},
+	})
 		return
 	}
 
@@ -68,7 +80,13 @@ func (s *ServerHandler) CreateIcon(c *gin.Context) {
 func (s *ServerHandler) UpdateIcon(c *gin.Context, id int) {
 	var apiRequest api.IconRequest
 	if err := c.ShouldBindJSON(&apiRequest); err != nil {
-		c.JSON(http.StatusBadRequest, api.ErrorResponse{Error: "некорректные данные запроса"})
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+		Id: c.GetHeader("X-Request-ID"),
+		Error: api.ErrorResponseDetail{
+			Code:    "validation",
+			Message: "некорректные данные запроса",
+		},
+	})
 		return
 	}
 
